# orion-persistence-of-vision

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  README.md.txt  SECURITY.md  TESTING.md  USAGE.md  cleanup.txt  constraints.full.lock.txt  constraints.txt  ltm_dump.txt  merge_chroma.py  persona_header.txt  pyproject.toml  requirements-dev.txt  requirements-freeze.txt  requirements.txt  setup.py  setup_orion.bat  start_orion.bat  start_orion.cmd  temp_requirements.txt  validate_structure.py  verify_orion_stack.ps1  version.yaml  version_bump.py
.github/: pull_request_template.md
chatlogs_normalized/: normalized.jsonl
cli/: README.md  check_embed.py  ltm_dump.json  main.py  orion_cli.py  orion_ingest_loop.py  pyproject.toml
cli/cli_helpers/: __init__.py  ingest_ltm.py  ltm_helpers.py  ltm_peek.py  orion_net_ingest.py  persona_check.py  persona_ingest.py  persona_recall.py  persona_seeder.py  summary_helper.py  utils.py
cli/commands/: __init__.py  chroma.py  persona.py
cli/config/: web_config.yaml
cli/core/: ingest.py  memory.py  persona.py
cli/data/: character.yaml  merged_ltm_v3(Chroma_Ready).jsonl  messages.md  personaOLD-2025-09-13.yaml  persona_guide.md  persona_template.yaml  seen_questions.txt  web_config.py  web_config.yaml
cli/lib/: chroma_utils.py  orion_guardrails.py  orion_ltm_integration.py
cli/modules/: chroma_ops.py  chroma_stats.py  chroma_validator.py  embed.py  embedding_provider.py  file_utils.py  ingest_logs.py  normalize_chatlogs.py  persona_utils.py  restore_ltm.py  summary.py
cli/scripts/: clean_txt.py  lora_train.py  ltm_dump.py  ltm_restore_json.py  ltm_restore_jsonl.py  make_lora_jsonl.py  orion_monitor.py  persona_seed.py  prepare_chunks_txt.py  prepare_lora_jsonl.py  set_autonomy_mode.py  test_memory_write.py  web_search.py
cli/utils/: chroma.py  ltm_dump_debug.py  web_search_hook.py
config/: orion.yaml
custom_ltm/: auto_memory.py  chroma_utils.py  memory_sentencer.py  orion_ctl.py  orion_ctl.py.bak  orion_ltm_integration.py  orion_memory.py
docs/: Orion_Persona_YAML_Field_Reference.csv  Philosophy.docx  emotion_profiles.md  orion_mind_docs.md  philosophy.md
examples/: basic_usage.py  emotion_weighted.py
internal/orion/: README.md  pyproject.toml
internal/orion/src/orion/: __init__.py
internal/orion/tests/: test_version.py
internal/orion_perseverance_of_vision/: README.md  persona.yaml  pyproject.toml
internal/orion_perseverance_of_vision/orion_perseverance_of_vision/: core.py
internal/orion_perseverance_of_vision/orion_perseverance_of_vision.egg-info/: PKG-INFO  top_level.txt
modules/: LoRA.py  block_requests.py  callbacks.py  chat.py  evaluate.py  exllamav2.py  exllamav2_hf.py  exllamav3.py  exllamav3_hf.py  extensions.py  gradio_hijack.py  html_generator.py  image_utils.py  llama_cpp_server.py  loaders.py  logging_colors.py  logits.py  metadata_gguf.py  models.py  models_settings.py  presets.py  prompts.py  sampler_hijack.py  sane_markdown_lists.py  shared.py  tensorrt_llm.py  text_generation.py  torch_utils.py  training.py  transformers_loader.py  ui.py  ui_chat.py  ui_default.py  ui_file_saving.py  ui_model_menu.py  ui_notebook.py  ui_parameters.py  ui_session.py  utils.py  web_search.py
orion/: __init__.py  cli.py
orion_cli/: cli.py  (+5 more)
(+76 files in other folders)
