[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "orion_pov"  # pip install name (unique on PyPI)
version = "3.2.0"
description = "Orion POV — Persona-driven LLM with memory, identity, and emotional scaffolding"
readme = "README.md"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "chromadb",
    "pyyaml",
    "sentence-transformers",
]

[tool.setuptools.packages.find]
include = ["orion", "orion.*"]

[project.scripts]
orion = "cli.orion_cli:main"
