[project]
name = "orion"
version = "3.0.1"
description = "Orion: Persistence of Vision – Internal Dev Module"
authors = [{ name = "DigitalMith", email = "jrichards00@proton.me" }]
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["orion"]

[tool.poetry.scripts]
orion-dev = "orion.core:OrionRuntime"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
