[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orion-perseverance-of-vision"
version = "3.0.1"
description = "Orion — Perseverance of Vision: A poetic, local-first LLM personality engine."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name="DigitalMith", email="jrichards00@proton.me" }]
license = { text = "AGPL-3.0" }

keywords = ["llm", "orion", "persona", "ai-companion", "text-generation", "mythic"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools]
package-dir = {"" = "."}
packages = ["orion_perseverance_of_vision"]
